переписано на Spring